syntax = "proto3";

option csharp_namespace = "MangaCatalog.GRPC.Protos";

service MangaProtoService {
	rpc GetManga (GetMangaRequest) returns (GetMangaResponse);
	rpc GetMangas (GetMangasRequest) returns (GetMangasResponse);
	rpc GetMangaGenres (GetMangaGrenresRequest) returns (GetMangaGenresResponse);
}

message Manga{
	string id = 1;
	string title = 2;
	string description = 3;
	string status = 4;
    string coverArt = 5;
    bool contentRating = 6;
    string authorId = 7;
    int32 numberOfRatings = 8;
    float sumOfRatings = 9;
}

message GetMangaRequest{
	string mangaId = 1;
}

message GetMangaResponse{
	Manga manga = 1;
}

message GetMangasRequest{
	repeated string mangaIds = 1;
}

message GetMangasResponse{
	repeated Manga mangas = 1;
}

message GetMangaGrenresRequest{
	string mangaId = 1;
}

message GetMangaGenresResponse{
	message Genre {
		string genreId = 1;
		string genreName = 2;
	}
	repeated Genre genres = 1;
}